--- a/app/src/main/res/layout/activity_add_product.xml
+++ b/app/src/main/res/layout/activity_add_product.xml
@@ -13,6 +13,7 @@
         android:text="@string/Fridge"
         android:textSize="30sp"
         android:layout_marginTop="40sp"
+        tools:ignore="TouchTargetSizeCheck"
         android:textAlignment="center"
         />
 
@@ -22,6 +23,7 @@
         android:layout_width="300sp"
         android:layout_height="wrap_content"
         android:hint="@string/product_name"
+        tools:ignore="TouchTargetSizeCheck"
         android:layout_gravity="center_horizontal"/>
 
     <Spinner
@@ -30,28 +32,33 @@
         android:layout_height="40sp"
         android:layout_marginTop="52dp"
         android:layout_gravity="center_horizontal"
+        tools:ignore="TouchTargetSizeCheck"
         android:prompt="@string/category_prompt" />
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="100sp"
+        android:layout_width="300sp"
+        android:layout_height="40sp"
         android:orientation="horizontal"
         android:layout_marginTop="10sp"
-        android:gravity="center_horizontal"
+        android:layout_gravity="center"
         >
         <Button
             android:id="@+id/buttonFridge"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/default_button_background"
-            android:onClick="onStorageTypeClicked"
+            android:layout_width="130sp"
+            android:layout_height="40sp"
+            android:background="@drawable/btn_shape3"
+            android:layout_marginEnd="10sp"
+            android:layout_marginStart="10sp"
+            tools:ignore="TouchTargetSizeCheck"
             android:text="@string/Fridge" />
 
         <Button
             android:id="@+id/buttonFreezer"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/default_button_background"
-            android:onClick="onStorageTypeClicked"
+            android:layout_width="130sp"
+            android:layout_height="40sp"
+            android:layout_marginEnd="10sp"
+            android:layout_marginStart="10sp"
+            tools:ignore="TouchTargetSizeCheck"
+            android:background="@drawable/btn_shape3"
             android:text="@string/Freezer" />
 
     </LinearLayout>
@@ -66,6 +73,7 @@
             android:layout_marginTop="20dp"
             android:hint="@string/Quantity"
             android:layout_gravity="center"
+            tools:ignore="TouchTargetSizeCheck"
             android:inputType="numberDecimal" />
 
         <Spinner
@@ -74,6 +82,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="5sp"
+            tools:ignore="TouchTargetSizeCheck"
             android:prompt="@string/unit_prompt" />
 
         <EditText
@@ -82,10 +91,11 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
             android:layout_gravity="center_horizontal"
-            android:drawableEnd="@drawable/ic_calendar"
             android:focusable="false"
             android:hint="@string/set_expiry_date"
-            android:inputType="date" />
+            tools:ignore="TouchTargetSizeCheck"
+            android:inputType="date"
+            android:autofillHints="@string/set_expiry_date" />
 
     </LinearLayout>
 
@@ -100,18 +110,26 @@
 
         <Button
             android:id="@+id/buttonSave"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="130sp"
+            android:layout_height="40sp"
+            android:background="@drawable/btn_shape3"
+            android:layout_marginEnd="10sp"
+            android:layout_marginStart="10sp"
             android:onClick="onSaveClicked"
+            tools:ignore="TouchTargetSizeCheck"
             android:text="@string/save" />
 
 
 
         <Button
             android:id="@+id/buttonBackToFridge"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="130sp"
+            android:layout_height="40sp"
+            android:layout_marginEnd="10sp"
+            android:layout_marginStart="10sp"
+            android:background="@drawable/btn_shape3"
             android:text="@string/back_to_fridge"
+            tools:ignore="TouchTargetSizeCheck"
             />
     </LinearLayout>
 
