--- a/app/src/main/res/layout/activity_fridge.xml
+++ b/app/src/main/res/layout/activity_fridge.xml
@@ -30,8 +30,10 @@
             android:id="@+id/editTextItem"
             android:layout_width="300sp"
             android:layout_height="50dp"
+            tools:ignore="TouchTargetSizeCheck"
             android:layout_gravity="center_horizontal"
             android:hint="@string/enter_item_to_search"/>
+
         <LinearLayout
             android:layout_width="300sp"
             android:layout_height="40sp"
@@ -45,6 +47,8 @@
                 android:layout_height="40sp"
                 android:layout_marginEnd="10sp"
                 android:layout_marginStart="10sp"
+                tools:ignore="TouchTargetSizeCheck"
+                android:background="@drawable/btn_shape3"
                 android:text="@string/search" />
 
             <Button
@@ -52,6 +56,8 @@
                 android:layout_width="130sp"
                 android:layout_height="40sp"
                 android:layout_marginEnd="10sp"
+                android:background="@drawable/btn_shape3"
+                tools:ignore="TouchTargetSizeCheck"
                 android:layout_marginStart="10sp"
                 android:text="@string/add_product" />
 
